src/tui/snapshots/kanban4ai__tui__tests__global_settings_backends_tab.snap
---
source: src/tui/tests.rs
expression: "render_at(&mut app, 80, 24)"
---
┌ Projects · Enter open · n new · r rename · p path · s settings · S stats · d ┐
│    Project                                 To Do  Doing  Review  Done  Agents│
├──────────────────────────────────────────────────────────────────────────────┤
│    Demo Board                                  1      1       0     0       ·│
│    /tmp/k4┌ Global settings ─────────────────────────────────────┐           │
│           │ Com │ Des │ Rev │ Exe │ Bck │ Prj                    │           │
│           │──────────────────────────────────────────────────────│           │
│           │┌ Backend order (Shift+↑/↓ or K/J moves) ────────────┐│           │
│           ││  1. claude                                         ││           │
│           ││  2. opencode                                       ││           │
│           ││  3. codex                                          ││           │
│           ││  4. omp                                            ││           │
│           ││  5. pi                                             ││           │
│           ││› 6. kimi                                           ││           │
│           │└────────────────────────────────────────────────────┘│           │
│           │┌────────────────────────────────────────────────────┐│           │
│           ││[ Save ]  [ Cancel ]                                ││           │
│           ││(Ctrl + S) use Tab, Enter or Shift + Tab to navigate││           │
│           │└────────────────────────────────────────────────────┘│           │
│           └──────────────────────────────────────────────────────┘           │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 Projects │ Enter open · n new · r rename · p path · d delete · ? help          

--- style runs ---
0:0-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
1:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
1:1-5 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1:5-12 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Reset).underline_color(Color::Reset).bold()
1:12-45 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1:45-50 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Reset).underline_color(Color::Reset).bold()
1:50-52 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1:52-57 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Reset).underline_color(Color::Reset).bold()
1:57-59 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1:59-65 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Reset).underline_color(Color::Reset).bold()
1:65-67 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1:67-71 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Reset).underline_color(Color::Reset).bold()
1:71-73 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1:73-79 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Reset).underline_color(Color::Reset).bold()
1:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
2:0-80 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Reset).underline_color(Color::Reset)
3:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
3:1-5 Style::new().fg(Color::Reset).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:5-15 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset).bold()
3:15-56 Style::new().fg(Color::Reset).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:56-57 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:57-64 Style::new().fg(Color::Reset).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:64-65 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:65-70 Style::new().fg(Color::Reset).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:70-71 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:71-78 Style::new().fg(Color::Reset).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:78-79 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
3:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
4:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
4:1-5 Style::new().fg(Color::Reset).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
4:5-12 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
4:12-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
4:68-79 Style::new().fg(Color::Reset).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
4:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
5:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
5:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
5:12-13 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:13-18 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:18-19 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:19-24 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:24-25 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:25-30 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:30-31 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:31-36 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:36-37 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:37-42 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset).bold()
5:42-43 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:43-48 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:48-67 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:67-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
5:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
5:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
6:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
6:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
6:12-13 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
6:13-67 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
6:67-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
6:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
6:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
7:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
7:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
7:12-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
7:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
7:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
8:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
8:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
8:12-14 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
8:14-66 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
8:66-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
8:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
8:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
9:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
9:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
9:12-14 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
9:14-66 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
9:66-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
9:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
9:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
10:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
10:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
10:12-14 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
10:14-66 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
10:66-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
10:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
10:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
11:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
11:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
11:12-14 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
11:14-66 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
11:66-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
11:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
11:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
12:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
12:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
12:12-14 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
12:14-66 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
12:66-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
12:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
12:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
13:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
13:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
13:12-14 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
13:14-66 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset).bold()
13:66-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
13:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
13:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
14:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
14:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
14:12-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
14:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
14:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
15:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
15:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
15:12-13 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
15:13-67 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
15:67-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
15:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
15:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
16:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
16:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
16:12-13 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:13-14 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:14-22 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:22-24 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:24-34 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:34-66 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:66-67 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:67-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
16:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
16:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
17:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
17:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
17:12-13 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
17:13-14 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
17:14-24 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
17:24-25 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
17:25-66 Style::new().fg(Color::Rgb(130, 133, 145)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
17:66-67 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
17:67-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
17:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
17:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
18:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
18:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
18:12-13 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
18:13-67 Style::new().fg(Color::Rgb(72, 76, 92)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
18:67-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
18:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
18:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
19:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
19:1-12 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
19:12-68 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Rgb(18, 18, 22)).underline_color(Color::Reset)
19:68-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
19:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
20:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
20:1-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
20:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
21:0-1 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
21:1-79 Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
21:79-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
22:0-80 Style::new().fg(Color::Rgb(106, 153, 255)).bg(Color::Reset).underline_color(Color::Reset)
23:0-80 Style::new().fg(Color::Rgb(230, 230, 235)).bg(Color::Rgb(72, 76, 92)).underline_color(Color::Reset)
